--- a/khoBlog/static/css/Themes/general-theme/general-theme.scss
+++ b/khoBlog/static/css/Themes/general-theme/general-theme.scss
@@ -215,14 +215,8 @@ $easeInOut: ease-in-out;
     }
 }
 
-.postContainer,
+.card-body,
 .todo {
-    background-color: #252525;
-
-    & .post {
-        border-bottom: 1px #777 solid !important;
-    }
-
     & .todo-completed {
         text-decoration: line-through;
         background-color: #222;
@@ -234,31 +228,8 @@ $easeInOut: ease-in-out;
         padding: 16px !important;
     }
 
-    & .postText {
-        font-size: 18px;
-        font-family: Lato, Helvetica Neue, Helvetica, sans-serif;
+    & .card-text {
         font-variant-ligatures: common-ligatures;
-        line-height: 1.67;
-        color: hsla(0, 0%, 100%, 0.75);
-
-        border-bottom: 4px #333 solid !important;
-        margin-bottom: 4px;
-        word-wrap: break-word;
-
-        & a {
-            color: $coolLinksColorBlue;
-            text-decoration: underline;
-            text-decoration-skip: ink;
-        }
-
-        & a:focus,
-        & a:hover {
-            text-decoration: none;
-        }
-
-        & p {
-            margin: 1.2em 0;
-        }
 
         & ol,
         ul {
@@ -314,286 +285,6 @@ $easeInOut: ease-in-out;
             }
         }
 
-        /*! normalize-scss | MIT/GPLv2 License | bit.ly/normalize-scss */
-        html {
-            line-height: 1.15;
-            -ms-text-size-adjust: 100%;
-            -webkit-text-size-adjust: 100%;
-        }
-
-        body {
-            margin: 0;
-        }
-
-        article,
-        aside,
-        footer,
-        header,
-        nav,
-        section {
-            display: block;
-        }
-
-        h1 {
-            font-size: 2em;
-            margin: 0.67em 0;
-        }
-
-        figcaption,
-        figure {
-            display: block;
-        }
-
-        figure {
-            margin: 1em 40px;
-        }
-
-        hr {
-            box-sizing: content-box;
-            height: 0;
-            overflow: visible;
-        }
-
-        main {
-            display: block;
-        }
-
-        pre {
-            font-family: monospace, monospace;
-            font-size: 1em;
-        }
-
-        a {
-            background-color: transparent;
-            -webkit-text-decoration-skip: objects;
-        }
-
-        abbr[title] {
-            border-bottom: none;
-            text-decoration: underline;
-            text-decoration: underline dotted;
-        }
-
-        b,
-        strong {
-            font-weight: inherit;
-            font-weight: bolder;
-        }
-
-        code,
-        kbd,
-        samp {
-            font-family: monospace, monospace;
-            font-size: 1em;
-        }
-
-        dfn {
-            font-style: italic;
-        }
-
-        mark {
-            background-color: #ff0;
-            color: #000;
-        }
-
-        small {
-            font-size: 80%;
-        }
-
-        sub,
-        sup {
-            font-size: 75%;
-            line-height: 0;
-            position: relative;
-            vertical-align: baseline;
-        }
-
-        sub {
-            bottom: -0.25em;
-        }
-
-        sup {
-            top: -0.5em;
-        }
-
-        audio,
-        video {
-            display: inline-block;
-        }
-
-        audio:not([controls]) {
-            display: none;
-            height: 0;
-        }
-
-        img {
-            border-style: none;
-        }
-
-        svg:not(:root) {
-            overflow: hidden;
-        }
-
-        button,
-        input,
-        optgroup,
-        select,
-        textarea {
-            font-family: sans-serif;
-            font-size: 100%;
-            line-height: 1.15;
-            margin: 0;
-        }
-
-        button {
-            overflow: visible;
-        }
-
-        button,
-        select {
-            text-transform: none;
-        }
-
-        [type='reset'],
-        [type='submit'],
-        button,
-        html [type='button'] {
-            -webkit-appearance: button;
-        }
-
-        [type='button']::-moz-focus-inner,
-        [type='reset']::-moz-focus-inner,
-        [type='submit']::-moz-focus-inner,
-        button::-moz-focus-inner {
-            border-style: none;
-            padding: 0;
-        }
-
-        [type='button']:-moz-focusring,
-        [type='reset']:-moz-focusring,
-        [type='submit']:-moz-focusring,
-        button:-moz-focusring {
-            outline: 1px dotted ButtonText;
-        }
-
-        input {
-            overflow: visible;
-        }
-
-        [type='checkbox'],
-        [type='radio'] {
-            box-sizing: border-box;
-            padding: 0;
-        }
-
-        [type='number']::-webkit-inner-spin-button,
-        [type='number']::-webkit-outer-spin-button {
-            height: auto;
-        }
-
-        [type='search'] {
-            -webkit-appearance: textfield;
-            outline-offset: -2px;
-        }
-
-        [type='search']::-webkit-search-cancel-button,
-        [type='search']::-webkit-search-decoration {
-            -webkit-appearance: none;
-        }
-
-        ::-webkit-file-upload-button {
-            -webkit-appearance: button;
-            font: inherit;
-        }
-
-        fieldset {
-            padding: 0.35em 0.75em 0.625em;
-        }
-
-        legend {
-            box-sizing: border-box;
-            display: table;
-            max-width: 100%;
-            padding: 0;
-            color: inherit;
-            white-space: normal;
-        }
-
-        progress {
-            display: inline-block;
-            vertical-align: baseline;
-        }
-
-        textarea {
-            overflow: auto;
-        }
-
-        details {
-            display: block;
-        }
-
-        summary {
-            display: list-item;
-        }
-
-        menu {
-            display: block;
-        }
-
-        canvas {
-            display: inline-block;
-        }
-
-        blockquote,
-        dl,
-        ol,
-        p,
-        pre,
-        ul {
-            margin: 1.2em 0;
-        }
-
-        h1,
-        h2,
-        h3,
-        h4,
-        h5,
-        h6 {
-            margin: 1.8em 0;
-            line-height: 1.33;
-        }
-
-        h1:after,
-        h2:after {
-            content: '';
-            display: block;
-            position: relative;
-            top: 0.33em;
-            border-bottom: 1px solid hsla(0, 0%, 50%, 0.33);
-        }
-
-        ol ol,
-        ol ul,
-        ul ol,
-        ul ul {
-            margin: 0;
-        }
-
-        dt {
-            font-weight: 700;
-        }
-
-        a {
-            color: #0c93e4;
-            text-decoration: underline;
-            text-decoration-skip: ink;
-        }
-
-        a:focus,
-        a:hover {
-            text-decoration: none;
-        }
-
         code,
         pre,
         samp {
@@ -607,34 +298,9 @@ $easeInOut: ease-in-out;
             font-size: inherit;
         }
 
-        .toc ul {
-            list-style-type: none;
-            padding-left: 20px;
-        }
-
-        table {
-            background-color: transparent;
-            border-collapse: collapse;
-            border-spacing: 0;
-        }
-
-        td,
-        th {
-            border-right: 1px solid #dcdcdc;
-            padding: 8px 12px;
-        }
-
-        td:last-child,
-        th:last-child {
-            border-right: 0;
-        }
-
-        td {
-            border-top: 1px solid #dcdcdc;
-        }
-
         mark {
-            background-color: #f8f840;
+            background-color: #f3b700;
+            border-radius: 0.5rem !important;
         }
 
         kbd {
@@ -690,25 +356,6 @@ $easeInOut: ease-in-out;
         margin: 2em 0;
     }
 }
-
-.hr {
-    border-top: 4px #222 solid !important;
-}
-
-.date {
-    font-size: 11pt;
-    color: #ddd;
-}
-
-.comment {
-    & .date {
-        & .khoUnderline {
-            text-decoration: underline;
-        }
-    }
-}
-
-/* override browser default */
 
 .tabbed-set {
     display: flex;
