--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -206,7 +206,7 @@
                             <div class="input-group-prepend">
                                 <span class="input-group-text bg-dark text-white border-secondary" id="basic-addon1">Search</span>
                             </div>
-                            <input type="text" class="form-control bg-dark border-secondary" id="post_search" placeholder="Search a post" name="q"
+                            <input type="text" class="form-control bg-dark text-white border-secondary" id="post_search" placeholder="Search a post" name="q"
                                 aria-label="search" aria-describedby="basic-addon1">
                         </div>
                     </form>
