--- a/blog/templates/blog/add_comment_to_post.html
+++ b/blog/templates/blog/add_comment_to_post.html
@@ -1,15 +1,13 @@
-{% extends 'blog/base_post.html' %}
 {% load bootstrap4 %}
 {% load markdown_extra %}
 
-{% block main %}
-    <h2>New Comment</h2>
-    <form method="POST" class="form">
-        {% csrf_token %}
-        {% bootstrap_form form %}
-        {% buttons %}
-            <button type="submit" class="btn btn-primary">Submit</button>
-        {% endbuttons %}
-    </form>
-    {{ form.media }}
-{% endblock main %}
+<form method="POST" class="form">
+    {% csrf_token %}
+    <div class="form-group">
+        {{ comment_form }}
+    </div>
+    {% buttons %}
+        <button type="submit" class="btn btn-primary">Submit</button>
+    {% endbuttons %}
+</form>
+{{ form.media }}
