--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -34,8 +34,46 @@
             </div>
 
             <div id="comments" class="card-footer border-secondary">
-                <div class="btn-group-vertical d-flex col-12 col-lg-5 p-0" role="group" aria-label="Comments Group">
-                    <a class="btn btn-primary d-block" href="{% url 'blog:add_comment_to_post' slug=post.slug %}">Add comment</a>
+                <div class="d-flex col-12 col-lg-5 p-0">
+                    <button type="button" class="btn btn-primary w-100" data-toggle="modal"
+                        data-target="#commentModal-{{ post.id }}">Add Comment
+                    </button>
+
+                    <div class="modal fade" id="commentModal-{{ post.id }}" tabindex="-1" aria-labelledby="commentModalLabel" aria-hidden="true">
+                        <div class="modal-dialog modal-xl">
+                            <div class="modal-content bg-dark">
+                                <ul class="nav nav-tabs" id="commentModalTab-{{ post.id }}" role="tablist">
+
+                                    <li class="nav-item" role="presentation">
+                                        <a class="nav-link active" id="comments-tab-{{ post.id }}" data-toggle="tab" href="#comments-{{ post.id }}"
+                                        role="tab" aria-controls="comments" aria-selected="true">Add Comment</a>
+                                    </li>
+                                </ul>
+
+                                <div class="tab-content" id="commentModalContent-{{ post.id }}">
+
+                                    <div class="tab-pane fade show active" id="comments-{{ post.id }}" role="tabpanel"
+                                        aria-labelledby="comments-tab-{{ post.id }}">
+
+                                        <div class="modal-header">
+                                            <h5 class="modal-title">{{ post.title }} - #{{ post.id }} - Add Comment</h5>
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                <span aria-hidden="true" class="text-light">&times;</span>
+                                            </button>
+                                        </div>
+
+                                        <div class="modal-body">
+                                            {% include 'blog/add_comment_to_post.html' %}
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                            <a href="{{ post.get_absolute_url }}#comments" class="btn btn-primary">Continue Reading</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 {% include 'blog/postcomments.html' %}
             </div>
