comments, stuff, voila

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -35,7 +35,7 @@
 
             <div id="comments" class="card-footer border-secondary">
                 <div class="btn-group-vertical d-flex col-12 col-lg-5 p-0" role="group" aria-label="Comments Group">
-                    <a class="btn btn-primary d-block" href="{% url 'blog:add_comment_to_post' slug=post.slug %}">Add comment</a>
+                    <a class="btn btn-primary d-block" href="{% url 'blog:add_comment_to_post' pk=post.pk %}">Add comment</a>
                 </div>
                 {% include 'blog/postcomments.html' %}
             </div>
