--- a/blog/templates/blog/postcomments.html
+++ b/blog/templates/blog/postcomments.html
@@ -9,17 +9,23 @@
                         <span class="float-right">
                             <div class="btn-group d-flex col-12 col-lg-5 p-0" role="group" aria-label="Comments Group">
                                 {% if not comment.approved_comment %}
-                                    <a class="btn btn-light" href="{% url 'blog:comment_remove' pk=comment.pk %}"><span
-                                            class="iconify" data-icon="foundation:page-remove"
-                                            data-inline="false"></span></a>
+                                    <a class="btn btn-light" href="{% url 'blog:comment_remove' pk=comment.pk %}">
+                                        <svg class="bi" fill="currentColor">
+                                            <use href="/static/img/bootstrap-icons.svg#trash"/>
+                                        </svg>
+                                    </a>
 
-                                    <a class="btn btn-light" href="{% url 'blog:comment_approve' pk=comment.pk %}"><span
-                                            class="iconify" data-icon="emojione-monotone:ok-button"
-                                            data-inline="false"></span></a>
+                                    <a class="btn btn-light" href="{% url 'blog:comment_approve' pk=comment.pk %}">
+                                        <svg class="bi" fill="currentColor">
+                                            <use href="/static/img/bootstrap-icons.svg#check-square"/>
+                                        </svg>
+                                    </a>
                                 {% endif %}
 
                                 <a class="btn btn-light" href="{% url 'blog:edit_post_comment' pk=comment.pk %}">
-                                    <span class="iconify" data-icon="ant-design:edit-filled" data-inline="false"></span>
+                                    <svg class="bi" fill="currentColor">
+                                        <use href="/static/img/bootstrap-icons.svg#pencil-square"/>
+                                    </svg>
                                 </a>
                             </div>
                         </span>
