--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -108,9 +108,6 @@
         <!-- base! favicon -->
         <link rel="shortcut icon" type="image/png" href="{% static 'img/favicon.ico' %}"/>
 
-        <!-- rel! twemoji.js -->
-        <script src="https://code.iconify.design/1/1.0.3/iconify.min.js"></script>
-
         <!-- rel! Fonts / Icons -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
 
@@ -118,6 +115,7 @@
         <link rel="stylesheet" href="{% static 'css/Themes/general-theme/general-theme.css' %}">
         <link rel="stylesheet" href="{% static 'css/Themes/highlight.css' %}">
         <link rel="stylesheet" href="{% static 'css/custom.css' %}">
+        <link rel="stylesheet" href="{% static 'img/bootstrap-icons.svg' %}">
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
     {% endblock rel %}
 
