--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -5,65 +5,67 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-V7PT0XGK3G"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
+    {% if not debug_flag %}
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-V7PT0XGK3G"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
 
-        function gtag() {
-            dataLayer.push(arguments);
-        }
+            function gtag() {
+                dataLayer.push(arguments);
+            }
 
-        gtag('js', new Date());
+            gtag('js', new Date());
 
-        gtag('config', 'G-V7PT0XGK3G');
-    </script>
+            gtag('config', 'G-V7PT0XGK3G');
+        </script>
 
-    <!-- Google Tag Manager -->
-    <script>(function (w, d, s, l, i) {
-        w[l] = w[l] || [];
-        w[l].push({
-            'gtm.start':
-                new Date().getTime(), event: 'gtm.js'
-        });
-        var f = d.getElementsByTagName(s)[0],
-            j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : '';
-        j.async = true;
-        j.src =
-            'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
-        f.parentNode.insertBefore(j, f);
-    })(window, document, 'script', 'dataLayer', 'GTM-ND43ZGJ');</script>
-    <!-- End Google Tag Manager -->
+        <!-- Google Tag Manager -->
+        <script>(function (w, d, s, l, i) {
+            w[l] = w[l] || [];
+            w[l].push({
+                'gtm.start':
+                    new Date().getTime(), event: 'gtm.js'
+            });
+            var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : '';
+            j.async = true;
+            j.src =
+                'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+            f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-ND43ZGJ');</script>
+        <!-- End Google Tag Manager -->
 
-    <!-- The core Firebase JS SDK is always required and must be listed first -->
-    <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-app.js"></script>
+        <!-- The core Firebase JS SDK is always required and must be listed first -->
+        <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-app.js"></script>
 
-    <!-- TODO: Add SDKs for Firebase products that you want to use
-        https://firebase.google.com/docs/web/setup#available-libraries -->
+        <!-- TODO: Add SDKs for Firebase products that you want to use
+            https://firebase.google.com/docs/web/setup#available-libraries -->
 
-    <script>
-        // Your web app's Firebase configuration
-        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-        var firebaseConfig = {
-            apiKey: "AIzaSyDo47xBD-VL4bN9JT_efi9u_lsYGys8pFQ",
-            authDomain: "django-khodok.firebaseapp.com",
-            databaseURL: "https://django-khodok.firebaseio.com",
-            projectId: "django-khodok",
-            storageBucket: "django-khodok.appspot.com",
-            messagingSenderId: "555741128855",
-            appId: "1:555741128855:web:aecc0210cffd7bc1b3a1d2",
-            measurementId: "G-9K7CK18BG6"
-        };
-        // Initialize Firebase
-        firebase.initializeApp(firebaseConfig);
-    </script>
+        <script>
+            // Your web app's Firebase configuration
+            // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+            var firebaseConfig = {
+                apiKey: "AIzaSyDo47xBD-VL4bN9JT_efi9u_lsYGys8pFQ",
+                authDomain: "django-khodok.firebaseapp.com",
+                databaseURL: "https://django-khodok.firebaseio.com",
+                projectId: "django-khodok",
+                storageBucket: "django-khodok.appspot.com",
+                messagingSenderId: "555741128855",
+                appId: "1:555741128855:web:aecc0210cffd7bc1b3a1d2",
+                measurementId: "G-9K7CK18BG6"
+            };
+            // Initialize Firebase
+            firebase.initializeApp(firebaseConfig);
+        </script>
+    {% endif %}
 
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
 
-    <link rel="canonical" href="https://blog.khodok.xyz/">
-    <link rel="shortlink" href="https://blog.khodok.xyz/">
+    <link rel="canonical" href="{{ CANONICAL_PATH }}">
+    <link rel="shortlink" href="{{ CANONICAL_PATH }}">
 
     <meta property="og:site_name" content="Hello There !"/>
     <meta property="og:image" content="{% static 'img/RuthinkkTooBig.png' %}">
@@ -123,12 +125,14 @@
 </head>
 
 <body class="text-white bg-dark">
-<!-- Google Tag Manager (noscript) -->
-<noscript>
-    <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-ND43ZGJ"
-            height="0" width="0" style="display:none;visibility:hidden"></iframe>
-</noscript>
-<!-- End Google Tag Manager (noscript) -->
+{% if not debug_flag %}
+    <!-- Google Tag Manager (noscript) -->
+    <noscript>
+        <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-ND43ZGJ"
+                height="0" width="0" style="display:none;visibility:hidden"></iframe>
+    </noscript>
+    <!-- End Google Tag Manager (noscript) -->
+{% endif %}
 
 <div class="container-fluid">
 
