--- a/khoBlog/templates/includes/auth.html
+++ b/khoBlog/templates/includes/auth.html
@@ -22,7 +22,7 @@
 
         <div class="btn-group-vertical d-block" role="group" aria-label="Group Admin">
             <a class="mb-0 btn btn-danger" href="{% url 'admin:index' %}">Admin</a>
-            <a class="mb-0 btn btn-danger" href="https://pythonanywhere.com">Pythonanywhere</a>
+            <a class="mb-0 btn btn-danger" href="https://eu.pythonanywhere.com">Pythonanywhere</a>
         </div>
 
     {% elif user.is_staff %}
